# RawrWM

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.license  .rustfmt.toml  Cargo.toml  README.md  flake.lock.license  flake.nix
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.reuse/: dep5
docs/: NOTES.md
lib/backends/wayland/: Cargo.toml
lib/backends/x11/: Cargo.toml
lib/rpc/: Cargo.toml
lib/utils/: Cargo.toml
src/backends/: Cargo.toml
src/backends/macos/: Cargo.toml
src/backends/macos/src/: lib.rs
src/backends/src/: lib.rs
src/backends/src/common/: mod.rs
src/backends/wayland/: Cargo.toml
src/backends/wayland/src/: lib.rs
src/backends/windows/: Cargo.toml
src/backends/windows/src/: lib.rs
src/backends/x11/: Cargo.toml
src/backends/x11/src/: lib.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
src/core/: Cargo.toml
src/core/src/: lib.rs
src/guile/: Cargo.toml
src/guile/src/: lib.rs
src/rpc/: Cargo.toml
src/rpc/src/: lib.rs
src/utils/: Cargo.toml
