[workspace]
members = [
    "bin/rawrd",
    "bin/rawrctl",
    "src/utils",
    "src/backends/x11",
    "src/rpc",
    "src/backends/wayland",
    "src/backends/windows",
    "src/backends/macos"
]

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1
debug = true

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3
debug = true

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
debug = true
strip = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 's'
debug = false
