# SPDX-FileCopyrightText: 2023 The RawrWM Developers
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "src/backends/macos",
    "src/backends/wayland",
    "src/backends/windows",
    "src/backends/x11",
    "src/bin/rawrctl",
    "src/bin/rawrd",
    "src/guile",
    "src/rpc",
    "src/common"
]

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1
debug = true

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3
debug = true

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
debug = true
strip = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 's'
debug = false
