# SPDX-FileCopyrightText: 2023 The RawrWM Developers
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "src/backends",
    "src/bin/rawrctl",
    "src/bin/rawrd",
    "src/core"
]

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1
debug = true

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3
debug = true

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
debug = true
strip = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 's'
debug = false
