[package]
name = "rawrwm_rpc"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2018"

[dependencies]
slog = "2.7.0"
slog-async = "2.6.0"
jsonrpc = "0.12.0"
jsonrpc-ipc-server = "18.0.0"

[dependencies.rawrwm_utils]
path = "../utils"

[dependencies.slog-journald]
version = "2.1.1"
optional = true

[dependencies.slog-term]
version = "2.8.0"
optional = true

# slog and other deps derived from leftwm, thanks!
[features]
default = ["slog-term"]
journald = ["slog-journald"]
