# SPDX-FileCopyrightText: 2023 The RawrWM Developers
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "rawrwm-backends"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2018"

[features]
default = []
x11 = ["breadx"]
wayland = ["smithay"]

[dependencies]

[target.'cfg(all(target_family = "unix", not(any(target_os = "ios", target_os = "macos"))))'.dependencies]
breadx = { version = "3.1.0", optional = true }
smithay = { verison = "0.3.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_RemoteDesktop",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "implement"
] }
