[package]
name = "rawrwm_backend_x11"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2021"

[dependencies]
penrose = "0.3.1"
slog = "2.7.0"
slog-async = "2.7.0"

[dependencies.slog-journald]
version = "2.2.0"
optional = true

[dependencies.slog-term]
version = "2.9.0"
optional = true

# slog and other deps derived from leftwm, thanks!
[features]
default = ["slog-term"]
journald = ["slog-journald"]
